Fixed index.html layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom CSS-->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand px-5 pb-5 pt-2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img id="logo" src="../styles/images/pup-1.png" alt="logo"></a>
+                    <a class="nav-link" href="#"><img id="logo" src="/styles/images/pup-1.png" alt="logo"></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="work.html">Work</a>
+                    <a class="nav-link" href="/views/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="/views/contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 text-center">
-                <img id="about-logo" src="../styles/images/pup-1.png" alt="logo">
+                <img id="about-logo" src="/styles/images/pup-1.png" alt="logo">
                 <h3 class="py-2">Welcome! :)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut in eligendi, sit
                     at nam vel itaque omnis animi doloribus reiciendis fugit modi et magni temporibus officia! Lorem
@@ -139,7 +139,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <!--Custom Script-->
-    <script src="../scripts/magic.js"></script>
+    <script src="/scripts/magic.js"></script>
 </body>
 
 </html>
