fixed logo link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand px-5 pb-5 pt-2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img id="logo" src="/styles/images/pup-1.png" alt="logo"></a>
+                    <a class="nav-link" href="#"><img id="logo" src="styles/images/pup-1.png" alt="logo"></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -139,7 +139,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <!--Custom Script-->
-    <script src="/scripts/magic.js"></script>
+    <script src=/scripts/magic.js"></script>
 </body>
 
 </html>
