Added basic functions for modals and changed some background colors

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <!--Custom Script-->
-    <script src=scripts/magic.js"></script>
+    <script src="scripts/magic.js"></script>
 </body>
 
 </html>
