Fixed Project page modal

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="col-md-5"></div>
             <div class="col-md-3">
-                <img id="frontend-pic" src="" alt="Frontend Picture">
+                <img id="frontend-pic" src="" alt="Backend Picture">
             </div>
         </div>
     </div>
