Fixed layout in home page and added function to add new tab when clicking a link

--- a/index.html
+++ b/index.html
@@ -53,13 +53,26 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 text-center">
-                <img id="about-logo" src="styles/images/lung-icon-happy.png" alt="logo">
-                <h3 class="py-2">Welcome! :)</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut in eligendi, sit
-                    at nam vel itaque omnis animi doloribus reiciendis fugit modi et magni temporibus officia! Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Accusamus debitis, nulla beatae ad inventore
-                    illum temporibus odio asperiores laudantium voluptates tenetur earum numquam nobis vitae impedit
-                    voluptatum ducimus, libero at.</p>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img id="about-logo" src="styles/images/lung-icon-happy.png" alt="logo">
+                    </div>
+                    <div class="col-sm-12">
+                        <h3 class="py-2">Welcome!</h3>
+                    </div>
+                    <div class="col-sm-12">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut in
+                            eligendi,
+                            sit
+                            at nam vel itaque omnis animi doloribus reiciendis fugit modi et magni temporibus officia!
+                            Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit. Accusamus debitis, nulla beatae ad
+                            inventore
+                            illum temporibus odio asperiores laudantium voluptates tenetur earum numquam nobis vitae
+                            impedit
+                            voluptatum ducimus, libero at.</p>
+                    </div>
+                </div>
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -76,7 +89,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 mb-5">
-                <h2 class="text-center">What I know</h2>
+                <h3 class="text-center">What I know</h2>
             </div>
             <div class="col-md-3">
                 <img id="frontend-pic" src="" alt="Frontend Picture">
@@ -108,7 +121,8 @@
                 <div class="col-md-12 pt-5">
                     <div class="text-center">
                         <!--Linkedin -->
-                        <a href="https://www.linkedin.com/in/hunter-wiegand-934ab8162/"><i class="fab fa-linkedin px-2"> </i></a>
+                        <a href="https://www.linkedin.com/in/hunter-wiegand-934ab8162/"><i class="fab fa-linkedin px-2">
+                            </i></a>
                         <!--Github-->
                         <a href="https://github.com/hunterwiegand"><i class="fab fa-github px-2"></i></a>
                         <!--Email-->
