Added content to home page

--- a/index.html
+++ b/index.html
@@ -61,16 +61,7 @@
                         <h3 class="py-2">Welcome!</h3>
                     </div>
                     <div class="col-sm-12">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut in
-                            eligendi,
-                            sit
-                            at nam vel itaque omnis animi doloribus reiciendis fugit modi et magni temporibus officia!
-                            Lorem
-                            ipsum dolor sit amet consectetur adipisicing elit. Accusamus debitis, nulla beatae ad
-                            inventore
-                            illum temporibus odio asperiores laudantium voluptates tenetur earum numquam nobis vitae
-                            impedit
-                            voluptatum ducimus, libero at.</p>
+                        <p>I'm a full stack web developer based in Seattle, Washington. I have a passion for learning new technologies, and am current seeking new oppertunities to grow as a developer.</p>
                     </div>
                 </div>
             </div>
@@ -92,26 +83,33 @@
                 <h3 class="text-center">What I know</h2>
             </div>
             <div class="col-md-3">
-                <img id="frontend-pic" src="" alt="Frontend Picture">
+                <img id="frontend-img" src="styles/images/frontend-img.jpg" alt="Frontend Picture">
             </div>
             <div class="col-md-5"></div>
             <div class="col-md-4 mb-5">
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab veniam unde autem ad fugiat ut esse,
-                    perferendis illo, dolorum recusandae nostrum natus voluptas nisi eveniet facere sapiente id quod
-                    sit!
-                </p>
+                <h4 class="text-center">Frontend Technologies</h4>
+                <ul>
+                    <li>HTML/CSS</li>
+                    <li>Javascript/jQuery</li>
+                    <li>Bootstrap</li>
+                    <li>ReactJS</li>
+                    <li>ReactNative</li>
+                    <li>AJAX</li>
+                </ul>
             </div>
             <div class="col-md-4 mt-3">
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab veniam unde autem ad fugiat ut esse,
-                    perferendis illo, dolorum recusandae nostrum natus voluptas nisi eveniet facere sapiente id quod
-                    sit!
-                </p>
+                <h4>Backend Technologies</h4>
+                <ul>
+                    <li>MySQL</li>
+                    <li>MongoDB</li>
+                    <li>Express</li>
+                    <li>Node.js</li>
+                    <li>Java</li>
+                </ul>
             </div>
             <div class="col-md-5"></div>
             <div class="col-md-3">
-                <img id="frontend-pic" src="" alt="Backend Picture">
+                <img id="backend-img" src="styles/images/backend-img.jpg" alt="Backend Picture">
             </div>
         </div>
     </div>
